--- a/paginaCuriosidade.css
+++ b/paginaCuriosidade.css
@@ -8,6 +8,7 @@
     margin-top: 50px;
     border-radius: 16px;
     padding: 2rem;
+    background: linear-gradient(135deg, rgb(240, 0, 0), rgb(248, 128, 128), rgb(255, 255, 255));
 }
 
 .curiosidade-box {
@@ -19,17 +20,47 @@
     margin: 1.5rem;
 }
 
-.box-curiosidade {
-    background-color: #2a75bb;
-    border-radius: 16px;
-    max-width: 240px;
-    height: 200px;
-    padding: 3rem 2.5rem;
-    color: white;
+/*Título das curiosidades*/
+.titulo-curiosidade {
     text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    font-family: "Press Start 2P";
+    font: 1.2rem;
+    color: #3868d8;
+    margin-bottom: 1.5rem;
+    text-shadow: 2px 2px 0 #000;
+}
+/*Cards das curiosidades*/
+.card-curiosidade {
+    background-color: rgba(255, 255, 255, 0.95);
+    border-radius: 16px;
+    padding: 1.5rem;
+    border-left: 5px solid #e3350d;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    margin: 1rem 0;
+    line-height: 1.5rem;
+    font-size: 0.95rem;
+    transition: all 0.3s ease;
+    animation: fadeUp .5s ease forwards;
+    opacity: 0;
+}
+@keyframes fadeUp {
+    from {opacity: 0; transform: translateY(10px); }
+    to {opacity: 1; transform: translateY(0);}
+}
+.card-curiosidade:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
+}
+
+@media (max-width: 768px) {
+  .curiosidade {
+    width: 98%;
+    padding: 1rem;
+  }
+
+  .card-curiosidade {
+    font-size: 0.9rem;
+  }
 }
 
 /*Garantir consistência do header*/
@@ -39,24 +70,4 @@ body:has(.curiosidade) .header {
 
 body:has(.curiosidade) .container {
     min-height: 60px !important;
-}
-
-/* Cards das curiosidades */
-.trivia {
-    font-family: "Roboto Mono", monospace;
-    background-color: #2a75bb;
-    border-radius: 16px;
-}
-.trivia {
-    background-color: rgba(255, 255, 255, 0.95);
-    border-radius: 16px;
-    padding: 1.5rem;
-    border-left: 5px solid #e3350d;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    margin: 1rem 0;
-    transition: all 0.3s ease;
-}
-.trivia:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
 }
