--- a/pokedex.css
+++ b/pokedex.css
@@ -42,7 +42,7 @@
 }
 
 /*Lista de pokémon*/
-lista-pokemons {
+.lista-pokemons {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
     gap: 1.5rem;
