--- a/pokedex.css
+++ b/pokedex.css
@@ -97,6 +97,24 @@
     font-weight: 500;
 }
 
+.pokemon-card .fav-icon {
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    
+    /* TAMANHO REDUZIDO */
+    width: 40px;
+    height: 40px;
+    
+    cursor: pointer;
+    transition: 0.2s;
+    z-index: 10;
+}
+
+.fav-icon:hover {
+    transform: scale(1.1);
+}
+
 .hidden {
     display: none !important;
 }
